--- a/doc/examples/mpi+omp/run.sh.in
+++ b/doc/examples/mpi+omp/run.sh.in
@@ -1,9 +1,9 @@
 #!/bin/bash
 
 # variables detected at configure time
-DLB_HOME=@prefix@
-MPIEXEC=@MPIEXEC@
-MPIEXEC_EXPORT_FLAG=@MPIEXEC_EXPORT_FLAG@
+DLB_HOME="../../../build"
+MPIEXEC="mpirun"
+MPIEXEC_EXPORT_FLAG="-x"
 
 # variables to be modified by the user
 TRACE=0
